--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
     "@types/express": "^5.0.0",
+    "@types/node": "^22.10.5",
     "@types/pg": "^8.11.10",
     "drizzle-kit": "^0.30.1",
     "ts-node-dev": "^2.0.0",
