--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -1,16 +1,19 @@
 version: '3.8'
 
 services:
-  db:
-    image: postgres:15
+  mysql:
+    image: mysql:8
+    container_name: pradepti-mysql
+    restart: always
     environment:
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: mydb
+      MYSQL_ROOT_PASSWORD: rootpassword
+      MYSQL_DATABASE: pradepti_db
+      MYSQL_USER: pradepti_user
+      MYSQL_PASSWORD: pradepti_pass
     ports:
-      - "5432:5432"
+      - "3306:3306"
     volumes:
-      - postgres-data:/var/lib/postgresql/data
+      - mysql_data:/var/lib/mysql
 
 volumes:
-  postgres-data:
+  mysql_data:
