--- a/server/package.json
+++ b/server/package.json
@@ -5,13 +5,17 @@
     "@types/pg": "^8.11.10",
     "drizzle-kit": "^0.30.1",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.3"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
-    "drizzle-orm": "^0.38.3",
+    "drizzle-orm": "^0.38.4",
     "express": "^4.21.2",
-    "pg": "^8.13.1"
+    "mysql2": "^3.12.0",
+    "pg": "^8.13.1",
+    "ts-node": "^10.9.2",
+    "zod": "^3.24.1"
   },
   "name": "server",
   "version": "1.0.0",
