--- a/server/package.json
+++ b/server/package.json
@@ -1,9 +1,12 @@
 {
   "devDependencies": {
     "@types/express": "^5.0.0",
+    "@types/jest": "^29.5.14",
     "@types/node": "^22.10.5",
     "@types/pg": "^8.11.10",
     "drizzle-kit": "^0.30.1",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.5",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.7.3"
   },
@@ -23,7 +26,8 @@
   "scripts": {
     "start": "node dist/server.js",
     "dev": "ts-node-dev server.ts",
-    "build": "tsc"
+    "build": "tsc",
+    "test": "jest --watchAll --no-cache --detectOpenHandles"
   },
   "keywords": [],
   "author": "",
