--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
     "@types/pg": "^8.11.10",
     "drizzle-kit": "^0.30.1",
     "jest": "^29.7.0",
+    "swagger-autogen": "^2.23.7",
     "ts-jest": "^29.2.5",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.7.3"
@@ -17,6 +18,8 @@
     "express": "^4.21.2",
     "mysql2": "^3.12.0",
     "pg": "^8.13.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "ts-node": "^10.9.2",
     "zod": "^3.24.1"
   },
@@ -27,7 +30,8 @@
     "start": "node dist/server.js",
     "dev": "ts-node-dev server.ts",
     "build": "tsc",
-    "test": "jest --watchAll --no-cache --detectOpenHandles"
+    "test": "jest --watchAll --no-cache --detectOpenHandles",
+    "swagger": "npx ts-node swaggerConfig.ts"
   },
   "keywords": [],
   "author": "",
