--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "compilerOptions": {
     "types": ["jest", "node"],
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "resolveJsonModule": true
   }
 }
+
